<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fun.fengwk.convention4j</groupId>
        <artifactId>convention4j-parent</artifactId>
        <version>1.2.2</version>
    </parent>

    <groupId>fun.fengwk.kk-studio</groupId>
    <artifactId>kk-studio-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>share</module>
        <module>studio</module>
        <module>core</module>
        <module>web</module>
        <module>harness</module>
        <module>plugins</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
        <kk-studio.version>1.0.0</kk-studio.version>
        <aws.sdk.version>2.29.52</aws.sdk.version>
        <convention4j-comfyui.version>1.2.2</convention4j-comfyui.version>
        <json-path.version>2.9.0</json-path.version>
        <langchain4j.version>1.18.0</langchain4j.version>
        <testcontainers.version>2.0.5</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-share</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-studio</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-harness-tool</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-harness-runtime</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-harness-plugin</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-plugin-goal</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-harness-runtime-spring</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-harness-daemon</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-core</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-web</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.convention4j</groupId>
                <artifactId>convention4j-comfyui</artifactId>
                <version>${convention4j-comfyui.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>${json-path.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.43.0</version>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>1.18.0</version>
                                <style>GOOGLE</style>
                            </googleJavaFormat>
                            <removeUnusedImports/>
                            <importOrder>
                                <order>\#,,fun.fengwk.kkstudio,javax,java</order>
                            </importOrder>
                        </java>
                    </configuration>
                    <executions>
                        <execution>
                            <id>spotless-check</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <configLocation>${maven.multiModuleProjectDirectory}/checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle-validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
